--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,27 @@
 page-home {
+    .bg-image {
+        background-image: url('../../assets/imgs/sign_in_screen.jpg');
+        height:100%;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        min-height: 100%;
+        // height:100%;
+    }
 
+    ion-grid {
+        height: 100%;
+        justify-content: center;
+    }
+
+    .bigger_text {
+        font-size: 3em;
+        color: DarkRed;
+        text-shadow: -1px 0 orange, 0 1px orange, 1px 0 orange, 0 -1px orange;
+    }
+
+    .bottomRow
+    {
+     margin-top: 40px;
+    }
 }
